# bsp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresetsTemplate.json  PACKAGING.md  README.md  gcovr.cfg
.devcontainer/: devcontainer.json
.github/workflows/: build-and-release.yml  pre-commit.yml
CMakePresets/: BspStaticLibPreset.json  HiddenPresets.json  UnitTestPreset.json  VersionPresets.json
bsp/bsp_led/: bsp_led.c  bsp_led.h
bsp_adc/: CMakeLists.txt  bsp_adc.c  bsp_adc.h
bsp_can/: CMakeLists.txt  bsp_can.c  bsp_can.h  bsp_can_config.h
bsp_common/: CMakeLists.txt  bsp_compiler_attributes.h
bsp_gpio/: CMakeLists.txt  bsp_gpio.c  bsp_gpio.h
bsp_i2c/: CMakeLists.txt  bsp_i2c.c  bsp_i2c.h
bsp_led/: CMakeLists.txt  bsp_led.c  bsp_led.h
bsp_pwm/: CMakeLists.txt  bsp_pwm.c  bsp_pwm.h
bsp_rtc/: CMakeLists.txt  bsp_rtc.c  bsp_rtc.h
bsp_spi/: CMakeLists.txt  bsp_spi.c  bsp_spi.h
bsp_swtimer/: CMakeLists.txt  bsp_swtimer.c  bsp_swtimer.h
cmake/: bsp-install.cmake  bsp-root-CMakeLists.txt.in  bspConfig.cmake.in  cpack.cmake  create_mocks.rb  deps.cmock.cmake  deps.hal.cmake  deps.toolchain.cmake  deps.unity.cmake  host.hal_def.h  mock.stm32_hal.cmake
docs/: bsp_adc.md  bsp_can.md  bsp_common.md  bsp_gpio.md  bsp_i2c.md  bsp_led.md  bsp_pwm.md  bsp_rtc.md  bsp_spi.md  bsp_swtimer.md  building.md  testing.md
tests/: CMakeLists.txt
tests/bsp_adc/: CMakeLists.txt  ut_bsp_adc.c
tests/bsp_can/: CMakeLists.txt  ut_bsp_can.c
tests/bsp_gpio/: CMakeLists.txt  test_bsp_gpio.c  ut_bsp_gpio.c
tests/bsp_gpio/gpio_structs/: gpio_struct.c  gpio_struct.h
tests/bsp_i2c/: CMakeLists.txt  ut_bsp_i2c.c
tests/bsp_led/: CMakeLists.txt  ut_bsp_led.c  ut_bsp_led.c.backup
tests/bsp_pwm/: CMakeLists.txt  ut_bsp_pwm.c
tests/bsp_rtc/: CMakeLists.txt  ut_bsp_rtc.c
tests/bsp_spi/: CMakeLists.txt  ut_bsp_spi.c
tests/bsp_swtimer/: CMakeLists.txt  ut_bsp_swtimer.c
tests/cmake/: coverage.cmake  deps.unity.cmake  host.hal_def.h  mock.stm32_hal.cmake  stm32f4xx_hal.h  stm32f4xx_hal_can.h  stm32f4xx_ll_adc.h  stm32f4xx_ll_gpio.h  stm32f4xx_ll_i2c.h  stm32f4xx_ll_spi.h  stm32f4xx_ll_tim.h  unity.hal.cmake  utils.cmake
